# s3edit

./: Cargo.toml  README.md
pkg/brew/: s3edit-bin.rb  s3edit.rb
src/: json_field_rename.rs  main.rs
